# misinformation-spread

./: .gitignore  README.md  create_detection_dataset.py  load_dataset.py  load_detection_dataset.py  pom.xml  requirements.txt  setup.cfg  test.ipynb  tox.ini
Detecting/: 00- Preprocessing.ipynb  03- ML Optuna Ens.ipynb  04- BigGRU.ipynb  04- Fasttext.ipynb  04- Logreg.ipynb  04- Nbsvm.ipynb  05- Transforme SVM.ipynb  05- Transforme XGB.ipynb  Research_Project_DSML_Transformer.ipynb
Spreading/: 01- Load data.ipynb  01-2 Select Users.ipynb  03- Tensorflow Rec.ipynb  LargeCovidDS.py
dataset/covid19-dataset/: readme.md
dataset/extended_tideh/code/: __init__.py  functions.py  predict.py  training.py
misinformation/: __init__.py
missinformation/: __init__.py  twitter.py
notebooks/: tests.ipynb
notebooks/detecting/: 00- Preprocessing.ipynb  03- ML Optuna Ens.ipynb  04- BigGRU.ipynb  04- Logreg.ipynb  04- Nbsvm.ipynb  05- Transforme XGB.ipynb  metrics.py  preproc.py
tests/: test_twitter_api.py
