[metadata]
name = missinformation-spread
author = Alex Kameni
author_email = eliealex.kameningangue@ensea.fr
version = attr: missinformation.__version__
description = API to access to Innova PDM
long_description = file: README.md, LICENSE.rst
keywords = misinformation, sources, spread, deeplearning, graph network
license = Other/Proprietary License
url = https://github.com/KameniAlexNea/misinformation-spread.git
classifiers = 
    DevelopmentStatus :: 3 - Alpha
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages =
    missinformation
    missinformation_examples
install_requires =
    numpy
    pandas
    matplotlib
    sklearn
    scipy